# Resume-optimization

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: health.py  jobs.py
backend/app/core/: config.py
backend/app/integrations/: llm_client.py
backend/app/prompts/: optimize_resume copy.md  optimize_resume.md  structure_resume.md
backend/app/repositories/: job_repo.py
backend/app/schemas/: job.py  result.py  resume.py
backend/app/services/: diff_builder.py  file_store.py  job_runner.py  pdf_parser.py  resume_optimizer.py  resume_pdf_exporter.py  resume_structurer.py  template_resume_pdf_exporter.py
backend/app/utils/: text_cleaner.py  validators.py
backend/resume_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_diff_builder.py  test_jobs_api.py  test_pdf_download.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/job/: JobStatusPanel.vue  ProgressBar.vue
frontend/src/components/result/: ChangeSummary.vue  DiffBlockCard.vue  DiffSplitView.vue  ResumePreview.vue
frontend/src/components/upload/: JobDescriptionInput.vue  ModeSelector.vue  ResumeUploadForm.vue
frontend/src/pages/: JobPage.vue  ResultPage.vue  UploadPage.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  jobs.ts
frontend/src/styles/: global.scss
frontend/src/types/: job.ts  result.ts  resume.ts
